Update RandomDataGenerator.java